// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SwappableCurrencyInput ERC721: matches snapshot: ERC721 1`] = `<DocumentFragment />`;

exports[`SwappableCurrencyInput ERC1155: matches snapshot: ERC1155 1`] = `
<DocumentFragment>
  <div
    class="unit-input asset-picker-amount__input-nft"
  >
    <div
      class="unit-input__inputs"
    >
      <div
        class="unit-input__input-container"
        style="display: inherit;"
        title="20480"
      >
        <input
          class="unit-input__input"
          data-testid="nft-input"
          dir="ltr"
          min="0"
          placeholder="0"
          step="any"
          style="width: 5.5ch;"
          type="number"
          value="20480"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SwappableCurrencyInput native: matches snapshot: native 1`] = `
<DocumentFragment>
  <div
    class="unit-input asset-picker-amount__input"
  >
    <div
      class="unit-input__inputs"
    >
      <div
        class="unit-input__input-container"
        style="display: inherit;"
        title="0.00000000000002048"
      >
        <input
          class="unit-input__input"
          data-testid="currency-input"
          dir="ltr"
          min="0"
          placeholder="0"
          step="any"
          style="width: 19ch;"
          type="number"
          value="0"
        />
        <div
          class="unit-input__suffix"
        >
          ETH
        </div>
      </div>
      <div
        class="currency-input__conversion-component"
      >
        [noConversionRateAvailable]
      </div>
    </div>
    <button
      aria-label="[switchInputCurrency]"
      class="mm-box mm-button-icon mm-button-icon--size-sm asset-picker-amount__input__swap mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-primary-default mm-box--background-color-transparent mm-box--rounded-lg"
    >
      <span
        class="mm-box mm-icon mm-icon--size-sm mm-box--display-inline-block mm-box--color-inherit"
        style="mask-image: url('./images/icons/swap-vertical.svg');"
      />
    </button>
  </div>
</DocumentFragment>
`;
